--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "udacity-c2-image-filter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./server.js",
+  "engines": { "node" : "14.16.0" },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf www/ || true",
-    "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
-    "dev": "ts-node-dev ./src/server.ts"
+    "build": "npm run clean && tsc && cp package.json www/package.json && cp .npmrc www/. && cp Procfile www/. && mkdirp www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "start": "node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -23,13 +25,18 @@
     "@types/bluebird": "^3.5.27",
     "@types/express": "^4.17.0",
     "@types/node": "^11.13.17",
-    "ts-node-dev": "^1.0.0-pre.40",
+    "ts-node-dev": "latest",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "ejs": "latest",
+    "aws-sdk": "latest",
+    "express": "latest",
+    "body-parser": "latest",
     "jimp": "^0.16.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "valid-url": "^1.0.9",
+    "nodemon": "^2.0.4"
   }
 }
